--- a/ejercicio2Modulo6.html
+++ b/ejercicio2Modulo6.html
@@ -18,23 +18,35 @@ function nuevoArreglo(arr) {
     return arrNuevo;
 }
 
- function arreglarMayorMenor(arr) {
-       var temp = 0;
-       for (var i = 0; i < arr.length; i++) {
-               for (var j = 1; j < (arr.length - i); j++) {
-                   if (arr[j - 1] > arr[j]) {
-                       temp = arr[j - 1];
-                       arr[j - 1] = arr[j];
-                       arr[j] = temp;
-                   }
-               }
-       }
-   return arr;
-  }
+function ordenarArreglo(arr) {
+    var temp = false;
+    while (!temp) {
+      temp = true;
+      for (var i = 1; i < arr.length; i += 1) {
+        if (arr[i - 1] > arr[i]) {
+          temp = false;
+          var temp2 = arr[i - 1];
+          arr[i - 1] = arr[i];
+          arr[i] = temp2;
+        }
+
+      }
+   }
+    return arr;
+}
+
+
+function reversoArreglo(arr){
+    var arrsalida = [];
+    for (var i = 0; i<= arr.length; i++){
+        arrsalida.push(arr.pop());
+    }
+
+    return arrsalida;
+}
 
 console.log("El arreglo nuevo de solo numeros es:  \n" +nuevoArreglo(inicio));
-console.log("El arreglo ordenado de mayor a menor es:  \n" +arreglarMayorMenor(nuevoArreglo(inicio)));
-
+console.log("El arreglo ordenado de mayor a menor es:  \n" + reversoArreglo(ordenarArreglo(nuevoArreglo(inicio))));
 </script>
 </body>
 </html>
